<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context="com.vitalsigns.demowatchcalibration.MainActivity">

  <Button
    android:id="@+id/scan_ble_device_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:text="@string/scan_ble_device"/>
  <android.support.percent.PercentRelativeLayout
    android:id="@+id/adj_pointer_layout"
    app:layout_widthPercent="100%"
    app:layout_heightPercent="80%"
    android:layout_centerInParent="true"
    android:visibility="gone">
    <TextView
      android:id="@+id/adj_pointer_title2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/adjust_pointer_title_1"
      android:gravity="center"
      android:layout_centerHorizontal="true"
      android:layout_above="@+id/adj_pointer_title"
      android:layout_marginTop="10dp"/>
    <TextView
      android:id="@+id/adj_pointer_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/adjust_pointer_title_2"
      android:gravity="center"
      android:layout_centerHorizontal="true"
      android:layout_above="@+id/adj_hour_pointer_layout"
      android:layout_marginBottom="20dp"/>
    <android.support.percent.PercentRelativeLayout
      android:id="@+id/adj_hour_pointer_layout"
      app:layout_widthPercent="70%"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_above="@+id/adj_minute_pointer_layout"
      android:layout_margin="10dp">
      <TextView
        android:id="@+id/adj_hour_pointer_layout_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:gravity="center"
        android:layout_centerInParent="true"/>
      <TextView
        android:id="@+id/adj_hour_pointer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour_pointer"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/adj_hour_pointer_layout_center"
        android:layout_marginEnd="10dp"/>
      <Button
        android:id="@+id/adj_hour_pointer_inc"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="+"
        android:textSize="20dp"
        android:gravity="center"
        android:background="@drawable/sdk_button_arc"
        android:layout_toEndOf="@+id/adj_hour_pointer_layout_center"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
      <Button
        android:id="@+id/adj_hour_pointer_dec"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="-"
        android:textSize="20dp"
        android:gravity="center"
        android:background="@drawable/sdk_button_arc"
        android:layout_toEndOf="@+id/adj_hour_pointer_inc"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"/>
    </android.support.percent.PercentRelativeLayout>
    <android.support.percent.PercentRelativeLayout
      android:id="@+id/adj_minute_pointer_layout"
      app:layout_widthPercent="70%"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_margin="10dp">
      <TextView
        android:id="@+id/adj_minute_pointer_layout_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:gravity="center"
        android:layout_centerInParent="true"/>
      <TextView
        android:id="@+id/adj_minute_pointer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minute_pointer"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/adj_minute_pointer_layout_center"
        android:layout_marginEnd="10dp"/>
      <Button
        android:id="@+id/adj_minute_pointer_inc"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="+"
        android:textSize="20dp"
        android:gravity="center"
        android:background="@drawable/sdk_button_arc"
        android:layout_toEndOf="@+id/adj_minute_pointer_layout_center"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
      <Button
        android:id="@+id/adj_minute_pointer_dec"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="-"
        android:textSize="20dp"
        android:gravity="center"
        android:background="@drawable/sdk_button_arc"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/adj_minute_pointer_inc"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"/>
    </android.support.percent.PercentRelativeLayout>
    <android.support.percent.PercentRelativeLayout
      android:id="@+id/adj_second_pointer_layout"
      app:layout_widthPercent="70%"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="20dp"
      android:layout_below="@+id/adj_minute_pointer_layout">
      <TextView
        android:id="@+id/adj_second_pointer_layout_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:gravity="center"
        android:layout_centerInParent="true"/>
      <TextView
        android:id="@+id/adj_second_pointer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_pointer"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/adj_second_pointer_layout_center"
        android:layout_marginEnd="10dp"/>
      <Button
        android:id="@+id/adj_second_pointer_inc"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="+"
        android:textSize="20dp"
        android:gravity="center"
        android:background="@drawable/sdk_button_arc"
        android:layout_toEndOf="@+id/adj_second_pointer_layout_center"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
      <Button
        android:id="@+id/adj_second_pointer_dec"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="-"
        android:textSize="20dp"
        android:gravity="center"
        android:background="@drawable/sdk_button_arc"
        android:layout_toEndOf="@+id/adj_second_pointer_inc"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"/>
    </android.support.percent.PercentRelativeLayout>
    <TextView
      android:id="@+id/btn_center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/adj_second_pointer_layout"
      android:layout_centerInParent="true"/>
    <Button
      android:id="@+id/adj_pointer_cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toStartOf="@+id/btn_center"
      android:layout_below="@+id/adj_second_pointer_layout"
      android:text="@string/btn_cancel"
      android:layout_margin="10dp"/>
    <Button
      android:id="@+id/adj_pointer_ok"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_toEndOf="@+id/btn_center"
      android:layout_below="@+id/adj_second_pointer_layout"
      android:text="@string/btn_ok"
      android:layout_margin="10dp"/>
  </android.support.percent.PercentRelativeLayout>
</android.support.percent.PercentRelativeLayout>
